# VS-Code-C-template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  main.h
